# m1nister

./: pyproject.toml
grid/: __main__.py  load.py  model.py  viz.py
mnister/: __main__.py  mnist_classifier.keras  visualize.py
